Test/errors/err_interface_pointer.cb
interface IReadable { int Read(); };

expect_error("pointer '*' is not allowed on interface type 'IReadable'") {
    IReadable* foo;
}
